added code to implement a "thermal slip wall" BC

--- a/src/BoundaryConditions/Makefile.am
+++ b/src/BoundaryConditions/Makefile.am
@@ -16,4 +16,5 @@ libBoundaryConditions_a_SOURCES = \
 	BCSupersonicInflow.c \
 	BCSupersonicOutflow.c \
   BCSWSlipWall.c \
+  BCThermalSlipWall.c \
 	BCTurbulentSupersonicInflow.c
