Initial implementation of Burgers equation.  Still some stability problems when reach shock that splits across positive and negative values.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -28,6 +28,7 @@ HyPar_LDADD = \
   ImmersedBoundaries/libImmersedBoundaries.a \
   BoundaryConditions/libBoundaryConditions.a \
   PhysicalModels/LinearADR/libLinearADR.a \
+  PhysicalModels/Burgers/libBurgers.a \
   PhysicalModels/FPDoubleWell/libFPDoubleWell.a \
   PhysicalModels/FPPowerSystem/libFPPowerSystem.a \
   PhysicalModels/FPPowerSystem1Bus/libFPPowerSystem1Bus.a \
