Some fixes and cleanups to the Burgers model and examples; added documentation comments; fixed issue with upwinding

--- a/src/PhysicalModels/Burgers/Makefile.am
+++ b/src/PhysicalModels/Burgers/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LIBRARIES = libBurgers.a
 libBurgers_a_SOURCES = \
   BurgersCleanup.c \
+  BurgersComputeCFL.c \
   BurgersInitialize.c \
   BurgersAdvection.c \
   BurgersUpwind.c
