some cleanup and encasing all header files in ifndef labels to avoid repeated includes

--- a/src/Simulation/Makefile.am
+++ b/src/Simulation/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LIBRARIES = libSimulation.a
 libSimulation_a_SOURCES = \
   Cleanup.c \
+	EnsembleSimulationsDefine.cpp \
   Initialize.c \
   InitializeBoundaries.c \
   InitializeImmersedBoundaries.c \
