created a specialized single simulation object

--- a/src/Simulation/Makefile.am
+++ b/src/Simulation/Makefile.am
@@ -11,5 +11,6 @@ libSimulation_a_SOURCES = \
   OutputSolution.c \
   ReadInputs.c \
   SimulationWriteErrors.c \
+	SingleSimulationDefine.cpp \
   Solve.c \
   SolvePETSc.c
