More work on sparse grids wrapper; periodic BC implementation seems to be broken

--- a/src/SparseGrids/Makefile.am
+++ b/src/SparseGrids/Makefile.am
@@ -1,8 +1,13 @@
 noinst_LIBRARIES = libSparseGrids.a
 libSparseGrids_a_SOURCES = \
+	SparseGridsCombinationTechnique.cpp \
 	SparseGridsDefine.cpp \
   SparseGridsInitialize.cpp \
+  SparseGridsInitialSolution.cpp \
+  SparseGridsInterpolate.cpp \
+  SparseGridsInterpolateGrid.cpp \
   SparseGridsMiscFuncs.cpp \
+  SparseGridsOutputSolution.cpp \
   SparseGridsSanityChecks.cpp \
 	SparseGridsSolve.cpp \
 	SparseGridsSetSolverParameters.cpp
