implemented calculation and writing of errors for sparse grids when exact solution is available

--- a/src/SparseGrids/Makefile.am
+++ b/src/SparseGrids/Makefile.am
@@ -1,5 +1,6 @@
 noinst_LIBRARIES = libSparseGrids.a
 libSparseGrids_a_SOURCES = \
+	SparseGridsCalculateError.cpp \
 	SparseGridsCombinationTechnique.cpp \
 	SparseGridsDefine.cpp \
   SparseGridsInitialize.cpp \
@@ -10,4 +11,5 @@ libSparseGrids_a_SOURCES = \
   SparseGridsOutputSolution.cpp \
   SparseGridsSanityChecks.cpp \
 	SparseGridsSolve.cpp \
-	SparseGridsSetSolverParameters.cpp
+	SparseGridsSetSolverParameters.cpp \
+	SparseGridsWriteErrors.cpp
