Implemented the filling of ghost points while interpolating between grids for sparse grids for periodic BCs - yet to implement for non-periodic

--- a/src/SparseGrids/Makefile.am
+++ b/src/SparseGrids/Makefile.am
@@ -3,6 +3,8 @@ libSparseGrids_a_SOURCES = \
 	SparseGridsCalculateError.cpp \
 	SparseGridsCombinationTechnique.cpp \
 	SparseGridsDefine.cpp \
+	SparseGridsFillGhostCells.cpp \
+  SparseGridsInitializationWrapup.cpp \
   SparseGridsInitialize.cpp \
   SparseGridsInitialSolution.cpp \
   SparseGridsInterpolate.cpp \
