implemented spatially-varying linear advection

--- a/src/PhysicalModels/LinearADR/Makefile.am
+++ b/src/PhysicalModels/LinearADR/Makefile.am
@@ -1,11 +1,12 @@
 noinst_LIBRARIES = libLinearADR.a
 libLinearADR_a_SOURCES = \
+  LinearADRAdvection.c \
+  LinearADRAdvectionField.c \
   LinearADRCleanup.c \
-  LinearADRInitialize.c \
   LinearADRComputeCFL.c \
   LinearADRComputeDiffNumber.c \
-  LinearADRAdvection.c \
   LinearADRDiffusion.c \
+  LinearADRInitialize.c \
   LinearADRJacobian.c \
   LinearADRReaction.c \
   LinearADRUpwind.c
