bugfixes and adding a function to write advection field

--- a/src/PhysicalModels/LinearADR/Makefile.am
+++ b/src/PhysicalModels/LinearADR/Makefile.am
@@ -9,4 +9,5 @@ libLinearADR_a_SOURCES = \
   LinearADRInitialize.c \
   LinearADRJacobian.c \
   LinearADRReaction.c \
-  LinearADRUpwind.c
+  LinearADRUpwind.c \
+	LinearADRWriteAdvField.c
