added the writing of electric field to data file for self-consistent Vlasov sims

--- a/src/PhysicalModels/Vlasov/Makefile.am
+++ b/src/PhysicalModels/Vlasov/Makefile.am
@@ -4,4 +4,5 @@ libVlasov_a_SOURCES = \
   VlasovComputeCFL.c \
   VlasovInitialize.c \
   VlasovAdvection.c \
-  VlasovUpwind.c
+  VlasovUpwind.c \
+	VlasovWriteEField.c
