ensemble sims now work with physics that read in some data from arrays

--- a/src/Simulation/Makefile.am
+++ b/src/Simulation/Makefile.am
@@ -6,6 +6,7 @@ libSimulation_a_SOURCES = \
   InitializeBoundaries.c \
   InitializeImmersedBoundaries.c \
   InitializePhysics.c \
+  InitializePhysicsData.c \
   InitializeSolvers.c \
   InitialSolution.c \
   OutputSolution.c \
