extended the code to handle the following for physics modules that read in some aux data that resides on a grid, i.e., of the same layout as the solution: 1) ensemble simulations will read in the aux data from indexed files that corresponds to that grid size, 2) sparse grids will read the full grid-sized data and interpolate it to their own size

--- a/src/MathFunctions/Makefile.am
+++ b/src/MathFunctions/Makefile.am
@@ -1,5 +1,7 @@
 noinst_LIBRARIES = libMathFunctions.a
 libMathFunctions_a_SOURCES = \
+	FillGhostCells.c \
   FindInterval.c \
+	InterpolateGlobalnDVar.c \
   TrilinearInterpolation.c
 
