--- a/src/IOFunctions/Makefile.am
+++ b/src/IOFunctions/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LIBRARIES = libIOFunctions.a
 libIOFunctions_a_SOURCES = \
   ReadArray.c \
+  ReadArraywInterp.c \
   WriteArray.c \
   WriteBinary.c \
   WriteTecplot2D.c \
