added functions to compute a interpolated variable and normal gradients of a variable at the IB surface; also a function to assemble local on-surface data to a global array, and streamlined calculation of IB forces

--- a/src/ImmersedBoundaries/Makefile.am
+++ b/src/ImmersedBoundaries/Makefile.am
@@ -1,7 +1,10 @@
 noinst_LIBRARIES = libImmersedBoundaries.a
 libImmersedBoundaries_a_SOURCES = \
+	IBAssembleGlobalFacetData.c \
   IBCleanup.c \
   IBComputeBoundingBox.c \
+  IBComputeFacetVar.c \
+  IBComputeNormalGradient.c \
   IBCreateFacetMapping.c \
   IBIdentifyBody.c \
   IBIdentifyBoundary.c \
