Streamlining the Vlasov physics module to make it more easily extensible to multi-D

--- a/src/PhysicalModels/Vlasov/Makefile.am
+++ b/src/PhysicalModels/Vlasov/Makefile.am
@@ -1,8 +1,11 @@
 noinst_LIBRARIES = libVlasov.a
 libVlasov_a_SOURCES = \
+  VlasovAdvection.c \
+  VlasovAdvectionCoeff.c \
   VlasovCleanup.c \
   VlasovComputeCFL.c \
+  VlasovEField.c \
+	VlasovFunctions.c \
   VlasovInitialize.c \
-  VlasovAdvection.c \
   VlasovUpwind.c \
 	VlasovWriteEField.c
