Restructuring of the combination technique code to enable future developments

--- a/src/Simulation/Makefile.am
+++ b/src/Simulation/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LIBRARIES = libSimulation.a
 libSimulation_a_SOURCES = \
   Cleanup.c \
+	CombineSolutions.c \
 	EnsembleSimulationsDefine.cpp \
   Initialize.c \
   InitializeBoundaries.c \
