implemented separate storage of ROM solution, calculating its diff with PDE solution, and writing it to file

--- a/src/HyParFunctions/Makefile.am
+++ b/src/HyParFunctions/Makefile.am
@@ -5,6 +5,7 @@ libHyParFunctions_a_SOURCES = \
   BoundaryIntegral.c \
   CalculateError.c \
   CalculateConservationError.c \
+  CalculateROMDiff.c \
 	ComputeRHSOperators.c \
   ExactSolution.c \
   HyperbolicFunction.c \
