overhauled the PETSc interface; should work with multidomain simulations

--- a/src/PETScFunctions/Makefile.am
+++ b/src/PETScFunctions/Makefile.am
@@ -1,22 +1,21 @@
 noinst_LIBRARIES = libPETScFunctions.a
 libPETScFunctions_a_SOURCES = \
-  PetscCleanup.c \
-  PetscComputeRHSOperators.c \
-  PetscComputePreconMatIMEX.c \
-  PetscComputePreconMatImpl.c \
-  PetscCreatePointList.c \
-  PetscGlobalDOF.c \
-  PetscError.c \
-  PetscIJacobian.c \
-  PetscIFunctionIMEX.c \
-  PetscIJacobianIMEX.c \
-  PetscPostStage.c \
-  PetscPostTimeStep.c \
-  PetscPreStage.c \
-  PetscPreTimeStep.c \
-  PetscRegisterTIMethods.c \
-  PetscRHSFunctionExpl.c \
-  PetscRHSFunctionImpl.c \
-  PetscRHSFunctionIMEX.c \
-  TransferFromPETSc.c \
-  TransferToPETSc.c
+  PetscCleanup.cpp \
+  PetscComputePreconMatIMEX.cpp \
+  PetscComputePreconMatImpl.cpp \
+  PetscCreatePointList.cpp \
+  PetscGlobalDOF.cpp \
+  PetscError.cpp \
+  PetscIJacobian.cpp \
+  PetscIFunctionIMEX.cpp \
+  PetscIJacobianIMEX.cpp \
+  PetscPostStage.cpp \
+  PetscPostTimeStep.cpp \
+  PetscPreStage.cpp \
+  PetscPreTimeStep.cpp \
+  PetscRegisterTIMethods.cpp \
+  PetscRHSFunctionExpl.cpp \
+  PetscRHSFunctionImpl.cpp \
+  PetscRHSFunctionIMEX.cpp \
+  TransferFromPETSc.cpp \
+  TransferToPETSc.cpp
