implemented a libROM-based initial guess calculation for implicit time integration

--- a/src/PETScFunctions/Makefile.am
+++ b/src/PETScFunctions/Makefile.am
@@ -17,5 +17,6 @@ libPETScFunctions_a_SOURCES = \
   PetscRHSFunctionExpl.cpp \
   PetscRHSFunctionImpl.cpp \
   PetscRHSFunctionIMEX.cpp \
+	PetscSetInitialGuessROM.cpp \
   TransferFromPETSc.cpp \
   TransferToPETSc.cpp
