add LSROMObject.cpp to automake

--- a/src/ROM/Makefile.am
+++ b/src/ROM/Makefile.am
@@ -1,4 +1,5 @@
 noinst_LIBRARIES = libROM.a
 libROM_a_SOURCES = \
   DMDROMObject.cpp \
-  libROMInterface.cpp
+  libROMInterface.cpp \
+  LSROMObject.cpp
