add SecondDerivativeSecondOrderNoGhosts to Makefile.am

--- a/src/SecondDerivative/Makefile.am
+++ b/src/SecondDerivative/Makefile.am
@@ -1,4 +1,5 @@
 noinst_LIBRARIES = libSecondDerivative.a
 libSecondDerivative_a_SOURCES = \
   SecondDerivativeSecondOrder.c \
+  SecondDerivativeSecondOrderNoGhosts.c \
   SecondDerivativeFourthOrder.c
