cleaned up the functions related to writing field and potential in Vlasov

--- a/src/PhysicalModels/Vlasov/Makefile.am
+++ b/src/PhysicalModels/Vlasov/Makefile.am
@@ -9,4 +9,4 @@ libVlasov_a_SOURCES = \
   VlasovInitialize.c \
   VlasovUpwind.c \
   VlasovWriteSpatialField.c \
-	VlasovWriteEField.c
+	VlasovWriteEFieldAndPotential.c
