--- a/src/ROM/Makefile.am
+++ b/src/ROM/Makefile.am
@@ -2,4 +2,7 @@ noinst_LIBRARIES = libROM.a
 libROM_a_SOURCES = \
   DMDROMObject.cpp \
   libROMInterface.cpp \
-  LSROMObject.cpp
+  LSROMObject.cpp \
+  VlasovAdvection_x.c \
+  VlasovAdvectionCoeff_x.c \
+  HyperbolicFunction_1dir.c
