added interface to Python; implemented in-situ plotting of solutions

--- a/src/Simulation/Makefile.am
+++ b/src/Simulation/Makefile.am
@@ -10,8 +10,8 @@ libSimulation_a_SOURCES = \
   InitializePhysicsData.c \
   InitializeSolvers.c \
   InitialSolution.c \
-  OutputSolution.c \
-  OutputROMSolution.c \
+  OutputSolution.cpp \
+  OutputROMSolution.cpp \
   ReadInputs.c \
   SimulationWriteErrors.c \
 	SingleSimulationDefine.cpp \
