More work on implementing in-situ plotting with Python

--- a/src/PhysicalModels/Vlasov/Makefile.am
+++ b/src/PhysicalModels/Vlasov/Makefile.am
@@ -8,5 +8,6 @@ libVlasov_a_SOURCES = \
 	VlasovFunctions.c \
   VlasovInitialize.c \
   VlasovUpwind.c \
+  VlasovPlotSpatialField.c \
   VlasovWriteSpatialField.c \
 	VlasovWriteEFieldAndPotential.c
