Update c-cpp.yml - add autoreconf

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: configure
-      run: ./configure
+      run: autoreconf -i && ./configure
     - name: make
       run: make
     - name: make check
