--- a/.github/workflows/c-cpp-mpich.yml
+++ b/.github/workflows/c-cpp-mpich.yml
@@ -1,4 +1,4 @@
-name: Linux GCC Serial
+name: Linux GCC + MPICH
 
 on: [push, pull_request]
 
@@ -9,8 +9,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: dependencies
+      run: .github/workflows/dependencies/dependencies_mpich.sh
     - name: configure
-      run: autoreconf -i && CC=gcc CXX=g++ MPICC=gcc MPICXX=g++ ./configure --enable-serial
+      run: autoreconf -i && ./configure
     - name: make
       run: make
     - name: make check
