updated name of petsc make rules file

--- a/configure.ac
+++ b/configure.ac
@@ -231,7 +231,7 @@ cat <<MFILE > petscmake$$
 PETSC_ARCH = ${PETSC_ARCH}
 PETSC_DIR  = ${PETSC_DIR}
 include ${PETSC_DIR}/lib/petsc/conf/variables
-include ${PETSC_DIR}/lib/petsc/conf/rules.utils
+include ${PETSC_DIR}/lib/petsc/conf/rules_util.mk
 MFILE
       PETSC_INC="`make -f petscmake$$ getincludedirs`"
       PETSC_LIB="`make -f petscmake$$ getlinklibs`"
